--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   flutter_bloc: ^8.1.3
   intl: ^0.18.1
   flutter_secure_storage: ^9.0.0
+  equatable: ^2.0.5
+  formz: ^0.6.1
+  dio: ^5.3.4
+  alice: ^0.4.1
+  overlay_support: ^2.1.0
+  get_it:
+  math_expressions: ^2.0.0
 
 dev_dependencies:
   flutter_test:
